[project]
name = "flux-saes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.3.0",
    "diffusers>=0.32.2",
    "diskcache>=5.6.3",
    "faiss-cpu>=1.10.0",
    "hf-transfer>=0.1.9",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jax>=0.5.1",
    "litellm>=1.61.20",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "more-itertools>=10.6.0",
    "numba>=0.61.0",
    "orbax>=0.1.9",
    "protobuf>=5.29.3",
    "ruff>=0.9.6",
    "scikit-learn>=1.6.1",
    "sentencepiece>=0.2.0",
    "setuptools>=75.8.0",
    "tenacity>=9.0.0",
    "transformers>=4.48.3",
    "wandb>=0.19.7",
]
